# ilugRegister

./: .gitignore  CMakeLists.txt  LICENSE  LugRegister.pro  README.md  ReadMe.md  rsc.qrc
LugRegister/: LugRegister.pro  configfile.cpp  database_export.cpp  database_export.h  logindialog.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
QtRPT/: QtRPT.pri
build file/: LugRegister
build-LugRegister-Desktop_Qt_5_3_GCC_64bit-Debug/: LugRegister  Makefile  lug.db  moc_mainwindow.cpp  ui_mainwindow.h
include/: configfile.h  ui_logindialog.h  ui_mainwindow.h
src/: configfile.cpp  database_export.cpp  database_export.h  logindialog.cpp  logindialog.h  main.cpp  mainwindow.cpp  mainwindow.h  moc_Barcode.cpp  moc_RptSql.cpp  moc_chart.cpp  moc_logindialog.cpp  moc_mainwindow.cpp  moc_qtrpt.cpp  photomanager.cpp  photomanager.h  qrc_imagesRpt.cpp  src.pri
src/UI/: widgetui.cpp  widgetui.h
src/controllers/: ilugapicontroller.cpp  ilugapicontroller.h
src/database/: mydatabase.cpp  mydatabase.h
src/model/: attendantmodel.cpp  attendantmodel.h  duedaymodel.cpp  duedaymodel.h  exportmodel.cpp  exportmodel.h  person.cpp  person.h  personmodel.cpp  personmodel.h  reportmodel.h
test/: CMakeLists.txt  lug.db  mydocument.xml  test.pro  tst_testlug.cpp  tst_testlug.h
ui/: logindialog.ui  mainwindow.ui
